--- a/index.html
+++ b/index.html
@@ -14,26 +14,29 @@
     <main class="contenido">
     <section class="contenido_areauno">
             <textarea name="ingresatexto" id="ingresatexto" placeholder="Escribe el texto a encriptar o desencriptar aquí."  class="contenido_areauno_cajatexto"></textarea> 
-            <div class="con">    
-            <img src="./assets/frame_1.png" alt="Signo de exclamación" class="contenido_areauno_frameuno">
-                <p class="contenido_areauno_aviso">Solo minusculas y sin acentos.</p>
+            <div class="contenido_areauno_frameuno">    
+            <section>
+                <img src="./assets/exclamation.svg" alt="Signo de exclamación">
+            </section>
+            <section class="contenido_areauno_aviso_p">    
+                <p>Solo minusculas y sin acentos.</p>
             </div>
             <div class="contenido_areauno_div">
-                <button type="submit" class="contenido_areauno_encrip">Encriptar</button>   
-                <button type="submit" class="contenido_areauno_desenc">Desencriptar</button>
+                <button type="submit" class="contenido_boton">Encriptar</button>   
+                <button type="submit" class="contenido_boton">Desencriptar</button>
             </div>
     </section>
     <section class="contenido_areados">
-        <div class="contenido_areados_divuno">
+        <div class="contenido_areados_divuno" id="5" style="display: flex">
             <img src="./assets/frame_2.png" alt="Muñeco sosteniendo una lupa" class="contenido_areados_divuno_img">
             <h5 class="contenido_areados_h5"> No hay nada por aquí</h5>
-            <p> Ingresa primero el texto que deseas encriptar o desencriptar</p>
+            <p class="contenido_areados_p"> Ingresa primero el texto que deseas encriptar o desencriptar.</p>
+        </div>
+        <div class="contenido_areados_divout" id="6" style="display: none;">
+            <textarea name="salidatexto" id="salidatexto" readonly class="contenido_areados_salida" placeholder="lorem ipsum dolor"></textarea>
         </div>
         <div>
-            <textarea name="salidatexto" id="salidatexto" readonly></textarea>
-        </div>
-        <div>
-            <button type="button">Copiar</button>
+            <button type="button" class="contenido_boton" id="7" style="display: none;">Copiar</button>
         </div>
     </section>
     </main>
