--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es-mx">
 <link rel="stylesheet" href="./styles/style.css">
-<script src="./app.js"></script>
+<script src="./js/app.js"></script>
+<script src="./js/valida.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +37,7 @@
             <textarea name="salidatexto" id="TextoOut" readonly class="contenido_areados_salida"></textarea>
         </div>
         <div>
-            <button type="button" class="contenido_boton" id="7" style="display: none;">Copiar</button>
+            <button onclick="CopiarTexto()" class="contenido_boton" id="7" style="display: none;">Copiar</button>
         </div>
     </section>
     </main>
