--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="contenido_areauno_div">
                 <button onclick="busquedaEncriptar()" class="contenido_boton">Encriptar</button>   
-                <button onclick="busquedaDesencriptar()" class="contenido_boton">Desencriptar</button>
+                <button onclick="busquedaDesencriptar()" class="contenido_boton_2">Desencriptar</button>
             </div>
     </section>
     <section class="contenido_areados">
@@ -36,7 +36,7 @@
             <textarea name="salidatexto" id="TextoOut" readonly class="contenido_areados_salida"></textarea>
         </div>
         <div>
-            <button onclick="CopiarTexto()" class="contenido_boton" id="7" style="display: none;">Copiar</button>
+            <button onclick="CopiarTexto()" class="contenido_boton_3" id="7" style="display: none;">Copiar</button>
         </div>
     </section>
     </main>
